# tabletenis-player-classify-wave

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
src/: main.ipynb  main.py  test.ipynb
src/tabletenis_player_classify_wave/: Model.py  __init__.py
