[project]
name = "tabletenis-player-classify-wave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hermeschen1116", email = "108386417+hermeschen1116@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.0.0",
    "datasets>=3.1.0",
    "jupyter>=1.1.1",
    "pip>=24.3.1",
    "polars>=1.16.0",
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
]
